# lssa

./: Cargo.toml  Justfile
.github/workflows/: ci.yml
bedrock/: cfgsync.yaml
bedrock/scripts/: run_logos_blockchain_node.sh
docs/LEZ testnet v0.1 tutorials/: amm.md
docs/research/: amm-direct-transfer-impact.md  amm-first-depositor-attack-vectors-and-impact.md
examples/program_deployment/: Cargo.toml
examples/program_deployment/methods/guest/: Cargo.toml
examples/program_deployment/scripts/: test_airdrop_flow.sh
explorer_service/src/pages/: transaction_page.rs
indexer/core/: Cargo.toml
indexer/core/src/: block_store.rs  config.rs  lib.rs
indexer/service/protocol/src/: convert.rs  lib.rs
indexer/service/src/: service.rs
integration_tests/: Cargo.toml
integration_tests/src/: config.rs  lib.rs
integration_tests/tests/: amm.rs  indexer.rs  keys_restoration.rs  token.rs  wallet_ffi.rs
integration_tests/tests/auth_transfer/: private.rs  public.rs
key_protocol/src/key_management/: mod.rs  secret_holders.rs
key_protocol/src/key_management/key_tree/: keys_public.rs
nssa/core/src/: account.rs  commitment.rs  program.rs
nssa/src/: error.rs  state.rs
nssa/src/privacy_preserving_transaction/: message.rs
nssa/src/public_transaction/: transaction.rs
nssa/src/signature/: private_key.rs
paywall/: Cargo.toml  DECISIONS.md  README.md  SPEC.md
paywall/methods/guest/: Cargo.toml
paywall/src/: lib.rs
paywall/tests/: integration.rs
programs/amm/core/src/: lib.rs
programs/amm/src/: add.rs  new_definition.rs  recover.rs  remove.rs  swap.rs  sync.rs  tests.rs  vault_utils.rs
sequencer/core/src/: block_store.rs  lib.rs
sequencer/service/configs/docker/: sequencer_config.json
sequencer_core/: Cargo.toml
sequencer_core/src/: block_publisher.rs  config.rs  lib.rs
sequencer_rpc/: Cargo.toml
sequencer_rpc/src/: lib.rs  process.rs
sequencer_runner/src/: lib.rs
storage/src/: indexer.rs
storage/src/indexer/: meta_cells.rs  mod.rs  read_multi_get.rs  read_once.rs  write_atomic.rs  write_batch.rs  write_non_atomic.rs  write_once.rs
tribute_to_talk/: Cargo.toml  README.md
tribute_to_talk/cli/: Cargo.toml
tribute_to_talk/cli/src/: main.rs
tribute_to_talk/core/: Cargo.toml
tribute_to_talk/core/src/: lib.rs
tribute_to_talk/docs/: development.md  privacy-and-limitations.md  receipt-and-verification.md  troubleshooting.md  usage.md
tribute_to_talk/methods/: Cargo.toml
tribute_to_talk/methods/guest/: Cargo.toml
wallet/: Cargo.toml
wallet/src/: chain_storage.rs  config.rs  helperfunctions.rs  lib.rs
wallet/src/cli/: account.rs  mod.rs
wallet/src/cli/programs/: amm.rs
wallet/src/program_facades/: amm.rs
