[workspace]
members = ["methods/guest"]

[package]
name = "paywall"
version = "0.1.0"
edition = "2021"

[dependencies]
nssa = { path = "../nssa" }
nssa_core = { path = "../nssa/core" }
wallet = { path = "../wallet" }
risc0-zkvm = { version = "3.0.3", features = ['std'] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
anyhow = "1.0"

[dev-dependencies]
integration_tests = { path = "../integration_tests" }
env_logger = "0.10"

[[bin]]
name = "paywall_cli"
path = "src/bin/paywall_cli.rs"
