[package]
name = "program_deployment"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa.workspace = true
nssa_core.workspace = true
wallet.workspace = true

tokio = { workspace = true, features = ["macros"] }
clap.workspace = true
serde.workspace = true
risc0-zkvm.workspace = true
bytemuck.workspace = true
rand.workspace = true
hex.workspace = true
borsh.workspace = true
risc0-binfmt = "3.0.2"
example_program_deployment_methods = { path = "methods" }
sha2.workspace = true
